fixed button alignment

--- a/src/app/components/search-box/search-box.component.scss
+++ b/src/app/components/search-box/search-box.component.scss
@@ -28,8 +28,8 @@
 
 #search-button {
   position: relative;
-  left: 50%;
-  margin: 3rem;
+  left: 46%;
+  margin-top: 3rem;
 }
 
 #search-icon {
